latex2mmlc/src/snapshots/latex2mmlc__tests__align_star.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\begin{align*}x&=1\\\\y=2\\end{align*}"
---
<math>
    <mtable displaystyle="true">
        <mtr>
            <mtd style="text-align: -webkit-right; text-align: -moz-right; padding-right: 0">
                <mi>x</mi>
            </mtd>
            <mtd style="text-align: -webkit-left; text-align: -moz-left; padding-left: 0">
                <mo>=</mo>
                <mn>1</mn>
            </mtd>
        </mtr>
        <mtr>
            <mtd style="text-align: -webkit-right; text-align: -moz-right; padding-right: 0">
                <mi>y</mi>
                <mo>=</mo>
                <mn>2</mn>
            </mtd>
        </mtr>
    </mtable>
</math>
