latex2mmlc/src/snapshots/latex2mmlc__tests__cases.snap
---
source: latex2mmlc/src/lib.rs
expression: "f(x):=\\begin{cases}0 &\\text{if } x\\geq 0\\\\1 &\\text{otherwise.}\\end{cases}"
---
<math>
    <mi>f</mi>
    <mo stretchy="false">(</mo>
    <mi>x</mi>
    <mo stretchy="false">)</mo>
    <mo>≔</mo>
    <mrow>
        <mo stretchy="true" form="prefix">{</mo>
        <mtable>
            <mtr>
                <mtd style="text-align: left; padding-right: 0">
                    <mn>0</mn>
                </mtd>
                <mtd style="text-align: left; padding-right: 0; padding-left: 1em">
                    <mtext>if </mtext>
                    <mi>x</mi>
                    <mo>≥</mo>
                    <mn>0</mn>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="text-align: left; padding-right: 0">
                    <mn>1</mn>
                </mtd>
                <mtd style="text-align: left; padding-right: 0; padding-left: 1em">
                    <mtext>otherwise.</mtext>
                </mtd>
            </mtr>
        </mtable>
        <mo stretchy="true" form="postfix"></mo>
    </mrow>
</math>
