latex2mmlc/src/snapshots/latex2mmlc__tests__colon_fusion.snap
---
source: latex2mmlc/src/lib.rs
expression: "a := 2 \\land b :\\equiv 3"
---
<math>
<mi>a</mi>
<mo lspace="0.2222em" rspace="0em">:</mo>
<mo lspace="0em">=</mo>
<mn>2</mn>
<mo>∧</mo>
<mi>b</mi>
<mo lspace="0.2222em" rspace="0em">:</mo>
<mo lspace="0em">≡</mo>
<mn>3</mn>
</math>
