latex2mmlc/src/snapshots/latex2mmlc__tests__color.snap
---
source: latex2mmlc/src/lib.rs
expression: "{\\color{Blue}x^2}"
---
<math>
    <mrow style="color:#102694;">
        <msup>
            <mi>x</mi>
            <mn>2</mn>
        </msup>
    </mrow>
</math>
