latex2mmlc/src/snapshots/latex2mmlc__tests__complex_square_root.snap
---
source: src/lib.rs
expression: "\\sqrt{x+2}"
---
<msqrt>
    <mrow>
        <mi>x</mi>
        <mo>+</mo>
        <mn>2</mn>
    </mrow>
</msqrt>

