latex2mmlc/src/snapshots/latex2mmlc__tests__complicated_operatorname.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\operatorname {{\\pi} o \\o a}"
---
<math>
    <mi>πoøa</mi>
</math>
