latex2mmlc/src/snapshots/latex2mmlc__tests__contour_integral.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\oint_C dz"
---
<math>
<msub>
    <mo>∮</mo>
    <mi>C</mi>
</msub>
<mi>d</mi>
<mi>z</mi>
</math>
