latex2mmlc/src/snapshots/latex2mmlc__tests__cube_root.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sqrt[3]{x}"
---
<math>
<mroot>
    <mi>x</mi>
    <mn>3</mn>
</mroot>
</math>
