latex2mmlc/src/snapshots/latex2mmlc__tests__curly_close_without_open.snap
---
source: latex2mmlc/src/lib.rs
expression: "}"
---
UnexpectedClose(
    TokLoc(
        0,
        GroupEnd,
    ),
)
