latex2mmlc/src/snapshots/latex2mmlc__tests__d_command.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\d"
---
<math>
    <mi mathvariant="normal">d</mi>
</math>
